2011-02-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPortCoder.m:
	* Source/common.h:
	* Source/NSObject.m:
	* Source/NSAutoreleasePool.m:
	* Source/NSProxy.m:
	* Source/NSSerializer.m:
	Replace all calls to get_imp() with the new runtime API
	class_getMethodImplementation().

2011-02-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDistributedNotificationCenter.m:
	* Source/GSFFCallInvocation.m:
	* Source/GSFFIInvocation.m:
	* Source/common.h:
	* Source/NSConnection.m:
	* Source/NSData.m:
	Use GSObjCRuntime functions for selector types until/unless we can get
	a standard runtime API that handles them.

2011-02-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m:
	* Source/NSProcessInfo.m:
	* Source/NSConcretePointerFunctions.m:
	* Source/GSFFCallInvocation.m:
	* Source/NSZone.m:
	* Source/NSCallBacks.m:
	* Source/win32/NSMessagePortNameServer.m:
	* Source/NSFileManager.m:
	* Source/NSURLProtocol.m:
	* Source/objc-load.m:
	* Source/NSException.m:
	* Source/cifframe.m:
	* Source/NSLog.m:
	* Tools/defaults.m:
	* Tests/base/NSInvocation/Resources/InvokeProxy.m:
	Remove obsolete calls to objc_malloc() in favour of NSZoneMalloc() or
	malloc() where using zones is not appropriate.

2011-02-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFFCallInvocation.m: Updated two obsolete runtime calls
	* Source/common.h: Revert last change as it seemed pointless to
	define macros within a private header which reproduce functions
	we don't actually use (or want to use) within base. I think/hope
	that the tiny change to GSFFcallInvocation.m is all that was needed.

2011-02-19 16:02  David Chisnall <theraven@gna.org>

	* libs/base/trunk/Source/common.h: Add some macros that map some
	libobjc functions to their runtime-specific variants.
	This avoids the need for ugly #ifdefs everywhere (the next commit
	will try to clean up some of this mess), and lets us use the _np
	function names everywhere to explicitly note that we are using